Some layout bugfixes

--- a/app/assets/stylus/content/inline.styl
+++ b/app/assets/stylus/content/inline.styl
@@ -13,6 +13,3 @@ kbd,
 samp,
 tt
     font-family $monospace
-
-pre
-	white-space pre-wrap
