--- a/app/assets/stylus/pages/front-page.styl
+++ b/app/assets/stylus/pages/front-page.styl
@@ -64,6 +64,7 @@
 
             &:before
                 icon-font()
+                color $quote-quotes
                 content i-left-quote
                 font-size $icon-size
                 left $x-space
@@ -73,6 +74,7 @@
             &:after
                 icon-font()
                 bottom $y-space
+                color $quote-quotes
                 content i-right-quote
                 font-size $icon-size
                 position absolute
