--- a/app/assets/stylus/widgets/button.styl
+++ b/app/assets/stylus/widgets/button.styl
@@ -13,7 +13,8 @@ input[type="submit"].button
     text-transform uppercase
 
     &:hover
-        border-color $white
+        background $white
+        color $red
         text-decoration none
 
     &__bordered
